--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,16 +21,14 @@
                 <ColumnDefinition Width="79*"/>
             </Grid.ColumnDefinitions>
         </Grid>
-        <Button Margin="70,26,-320,343" Grid.Column="2" Click="Button_Click" Grid.ColumnSpan="2">
-            <TextBlock TextWrapping="Wrap" Text="Generate Graph"/>
+        <Button Margin="80,157,-330,212" Grid.Column="2" Click="Button_Click" Grid.ColumnSpan="2">
+            <TextBlock x:Name="ButtonText" TextWrapping="Wrap" Text="Input Data (.xlsx)"/>
         </Button>
-        <Button Margin="70,131,-320,238" Grid.Column="2" Click="Button_Click1" Grid.ColumnSpan="2">
-            <TextBlock TextWrapping="Wrap" Text="Input Text"/>
-        </Button>
-        <TextBox Margin="148,250,-242,138" Grid.Column="2" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
+        <TextBox Margin="300,370,-394,18" Grid.Column="2" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged"/>
         <TextBlock Margin="168,222,-222,189" Grid.Column="2" Grid.ColumnSpan="2" Text="" />
-        <TextBlock Margin="172,301,-226,110" Grid.Column="2" Grid.ColumnSpan="2" ><Run Language="en-ca" Text="Y"/><Run Text="-Axis"/></TextBlock>
-        <TextBox Margin="148,329,-242,57" Grid.Column="2" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged_1" />
+        <TextBlock Margin="320,382,-374,29" Grid.Column="2" Grid.ColumnSpan="2" ><Run Language="en-ca" Text="Y"/><Run Text="-Axis"/></TextBlock>
+        <TextBox Margin="300,368,-394,18" Grid.Column="2" Grid.ColumnSpan="2" TextChanged="TextBox_TextChanged_1" />
         <TextBlock x:Name="BottomBox" Margin="65,331,40,26" Grid.Column="1" Text="" />
+        <TextBlock x:Name="PopUpBox" Margin="128,245,-282,96" Grid.Column="2" Grid.ColumnSpan="2" Text="" />
     </Grid>
 </Window>
